[EK] Fixed 1.4 compilation errors (target in build isn't enough?)