@@ -97,8 +97,8 @@ public class ClassMockObjectBehaviour extends UsingMiniMock {
             		AClassWithNoConstructorsAtAll.class}, 
     			new Object[] {
     				"",
-    				Integer.valueOf(0),
-    				Character.valueOf(' '),
+    				new Integer(0),
+    				new Character(' '),
     				new Object[0],
     				AClassWithNoConstructorsAtAll.INSTANCE});
     }
